--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ width: 100%;
 th {
 	font-weight: bold;
 	padding: 5px;
-	background: #efefef;
+	background: #ffffff;
 	border: 1px solid #dddddd;
 }
 .center-pic {
