--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 h1 { text-align: center; }
 table {
 width: 100%;
+border-collapse: collapse;   
+border: 1px solid white;
 }
 th {
 font-weight: bold;
