--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,36 @@
 h1 { text-align: center; }
+
 table {
 width: 100%;
 border-collapse: collapse;   
 border: 1px solid white;
 }
+
 th {
 font-weight: bold;
 padding: 5px;
 }
+
 .center-pic {
 display: block;
 margin: auto;
+}
+
+a {
+  color: blue;
+  font-family: helvetica;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  color: black;
+}
+
+a:visited {
+  color: purple;
 }
