--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,17 @@
 h1 { text-align: center; }
+
+h2 { text-align: center; }
+
 h3 { text-align: center; }
+
 table {
 width: 100%;
-border-collapse: collapse;   
-border: 1px solid white;
+border-collapse: collapse;
 }
 
 th {
 font-weight: bold;
-padding: 5px;
+padding: 50px;
 }
 
 .center-pic {
