--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,19 @@ font-weight: bold;
 padding: 20px;
 }
 
+table.vins-page {
+width: 100%;
+background-color: #ffffff
+border-collapse: collapse;
+}
+
+th.index-button {
+background-color: #ffffff;
+font-weight: bold;
+padding: 20px;
+text-align: right;
+}
+
 .fullscreen {
 width: 100% /* ширина изображения 100% */
 }
