--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,13 @@ border: 1px solid #1e2f49;
 
 th.vins-page {
 padding: 20px;
+text-align: center;
 width: 33%;
 }
 
 th.feedback-page {
 padding: 20px;
+text-align: center;
 width: 33%;
 }
 
