--- a/css/style-test-js-page.css
+++ b/css/style-test-js-page.css
@@ -1,34 +1,45 @@
 @keyframes header_anim {
-  from {
-  transform: translateX(-120%);
-  }
-  to {
-  transform: translateX(0);
-  }
-  }
-
-  body {  
-  margin: 0;
-  padding: 0;
-  background-color: #1e2f49;
+    from {
+      transform: translateX(-120%);
+    }
+    to {
+      transform: translateX(0);
+    }
   }
 
-  .header {
-  display: flex;
-  min-height: 70vh;
-  padding: 8px 50px;
+  @media (max-width: 1200px) { 
+    h1 {
+      position: relative;
+      font-family: "Montserrat", sans-serif;
+      font-size: 5em;
+      font-weight: 500;
+      transform: translateX(0);
+      animation-name: header_anim;
+      animation-duration: 1s;
+      animation-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      text-transform: uppercase;
+      color: #3aebca;
+      align-self: center;
+      }
   }
 
   h1 {
-  position: relative;
-  font-family: "Montserrat", sans-serif;
-  font-size: 6em;
-  font-weight: 700;
-  transform: translateX(0);
-  animation-name: header_anim;
-  animation-duration: 1s;
-  animation-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  text-transform: uppercase;
-  color: #3aebca;
-  align-self: center;
+    position: relative;
+    font-family: "Montserrat", sans-serif;
+    font-size: 7em;
+    font-weight: 700;
+    transform: translateX(0);
+    animation-name: header_anim;
+    animation-duration: 1s;
+    animation-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    text-transform: uppercase;
+    color: #3aebca;
+    align-self: center;
+    }
+
+  .header {
+  display: flex;
+  min-height: 80vh;
+  padding: 8px 50px;
   }
+
