--- a/css/style-test-js-page.css
+++ b/css/style-test-js-page.css
@@ -7,7 +7,7 @@
     }
   }
 
-  h1 {
+  .divText {
     position: relative;
     font-family: "Montserrat", sans-serif;
     font-size: 6em;
@@ -24,5 +24,5 @@
   .header {
   display: flex;
   min-height: 80vh;
-  padding: 8px 50px;
+  padding: 8px 30px;
   }
