--- a/css/style-test-js-page.css
+++ b/css/style-test-js-page.css
@@ -10,7 +10,7 @@
   .divText {
     position: relative;
     font-family: "Montserrat", sans-serif;
-    font-size: 6em;
+    font-size: 6vw;
     font-weight: 700;
     transform: translateX(0);
     animation-name: header_anim;
@@ -24,5 +24,6 @@
   .header {
   display: flex;
   min-height: 80vh;
+  max-width: 90%;
   padding: 8px 30px;
   }
